--- a/slides.css
+++ b/slides.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #5758BB;
+    background-color: #4a69bd;
     color: #ffffff;
     font-family: 'Barlow', sans-serif;
     margin: 0;
@@ -13,6 +13,14 @@ h1 {
 
 h2 {
     font-size: 40px;
+}
+
+p {
+    font-size: 35px;
+}
+
+a {
+    color: white;
 }
 
 .slide {
