--- a/slides.css
+++ b/slides.css
@@ -28,3 +28,11 @@ a {
     justify-content: center;
     align-items: center;
 }
+
+pre {
+    text-align: left;
+    color: black;
+    background-color: white;
+    font-size: 30px;
+    padding: 20px;
+}
