--- a/slides.css
+++ b/slides.css
@@ -33,6 +33,12 @@ img {
 strong,
 a {
     color: #fd79a8;
+    transition: 300ms;
+}
+
+a:hover {
+    opacity: .7;
+    color: black;
 }
 
 .slide {
