--- a/slides.css
+++ b/slides.css
@@ -36,6 +36,15 @@ a {
     transition: 300ms;
 }
 
+
+li {
+    list-style: none;
+    font-size: 30px;
+    margin-bottom: 40px;
+    text-align: left;
+    color: #fd79a8;
+}
+
 a:hover {
     opacity: .7;
     color: black;
