--- a/styles.css
+++ b/styles.css
@@ -15,15 +15,21 @@ footer {
 }
 
 
-ul {
-    margin: 0;
+nav {
     padding: 20px;
 }
 
+
+nav a {
+    margin-right: 20px;
+}
+
+nav span {
+    margin-right: 20px;
+}
+
 li {
-    list-style: none;
-    display: inline;
-    padding: 20px;
+    padding: 10px;
 }
 
 a {
@@ -55,7 +61,7 @@ img {
     margin: 0 auto;
     margin-right: 15px;
     border: solid 3px #833471;
-    border-radius: 5%;
+    border-radius: 50%;
 }
 
 .name {
@@ -66,5 +72,7 @@ img {
 
 .centered {
     text-align: center;
+    margin-top: 50px;
+    padding-top: 50px;
 }
 
